--- a/src/partials/products.html
+++ b/src/partials/products.html
@@ -1,3 +1,10 @@
 <section>
-  <div class="container"></div>
+  <div class="container">
+    <ul>
+      <li>asdffas</li>
+      <li>dsasa</li>
+      <li>adsas</li>
+      <li>adfsda</li>
+    </ul>
+  </div>
 </section>
